--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -1,17 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MotionScene
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <ConstraintSet android:id="@+id/start">
-        <Constraint android:id="@+id/textView"/>
+        <Constraint
+            android:id="@+id/main_location_textview"
+            android:elevation="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/location_icon"
+            app:layout_constraintRight_toRightOf="parent">
+
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/location_icon"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            app:layout_constraintBottom_toBottomOf="@id/main_location_textview"
+            app:layout_constraintRight_toLeftOf="@id/main_location_textview"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            android:layout_marginRight="2dp"/>
+
+
+
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
-        <Constraint android:id="@id/textView"/>
+
+        <Constraint
+            android:id="@+id/main_location_textview"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintLeft_toRightOf="@id/location_icon"
+            app:layout_constraintTop_toTopOf="@id/blackbg"
+            app:layout_constraintBottom_toBottomOf="@id/blackbg"
+            android:layout_marginLeft="16dp"
+            android:scaleX="1.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            android:scaleY="1.5">
+
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/location_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            app:layout_constraintBottom_toBottomOf="@id/main_location_textview"
+            app:layout_constraintRight_toLeftOf="@id/main_location_textview"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            android:layout_marginRight="2dp"
+            android:alpha="0.0"
+            />
+
+        <Constraint
+                android:id="@+id/blackbg" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+
+        <Constraint android:id="@+id/main_weather_temperature"
+                    app:layout_constraintLeft_toRightOf="@id/main_weather_icon" android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
+                    android:alpha="0.0"
+                    android:scaleX="0.0"
+                    android:scaleY="0.0"
+                    app:layout_constraintRight_toRightOf="parent" />
+
+        <Constraint android:id="@+id/main_weather_icon" android:layout_width="90dp" android:layout_height="90dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:alpha="0.0"
+                    android:scaleX="0.0"
+                    android:scaleY="0.0"
+                    app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/main_weather_temperature"/>
+        <Constraint android:id="@+id/main_precipitation_textview" android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.0"
+                    android:scaleX="0.0"
+                    android:scaleY="0.0"
+                    app:layout_constraintTop_toBottomOf="@id/main_weather_temperature"
+                    app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"/>
     </ConstraintSet>
 
     <Transition
             app:constraintSetStart="@+id/start"
-            app:constraintSetEnd="@id/end"/>
+            app:constraintSetEnd="@id/end">
+    </Transition>
 </MotionScene>
