--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:fillViewport="true"
     android:background="@android:color/black">
     <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
-               android:id="@+id/weather_image"
+               android:id="@+id/weather_image_background"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="centerCrop"/>
@@ -31,24 +31,27 @@
                   android:background="#ad000000"
                   app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
-            <ImageView android:layout_width="90dp" android:layout_height="90dp"
-                       android:src="@drawable/sun_yellow"
-                       android:id="@+id/main_weather_icon"
-                       android:scaleType="fitCenter"
 
-                       app:layout_constraintBottom_toBottomOf="@+id/main_weather_temperature"
-                       app:layout_constraintRight_toLeftOf="@id/main_weather_temperature"
-                       app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_chainStyle="packed"/>
+            <ImageView
+                android:id="@+id/main_weather_icon"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:scaleType="fitCenter"
+                app:layout_constraintBottom_toBottomOf="@+id/main_weather_temperature"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/main_weather_temperature"
+                app:layout_constraintTop_toTopOf="@+id/main_weather_temperature" />
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/main_weather_temperature"
-                    android:text="25°C"
+                    tools:text="25°C"
                     android:textColor="@android:color/white"
-                    android:textSize="64sp"
-
-
+                    android:textSize="76sp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintLeft_toRightOf="@id/main_weather_icon"
