--- a/app/src/main/res/layout/weather.xml
+++ b/app/src/main/res/layout/weather.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/weather_layout"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="100dp"
-        android:layout_height="60dp">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="80dp"
+        tools:background="@android:color/black"
+        android:layout_height="140dp">
     <TextView
-            android:id="@+id/weather_textview"
+            android:id="@+id/time_textview"
+            android:textColor="@android:color/white"
             android:layout_width="wrap_content"
+            tools:text="19:00"
+            android:textSize="13sp"
             android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toTopOf="@+id/weather_imageview" android:layout_marginBottom="16dp"/>
+    <ImageView
+            android:id="@+id/weather_imageview"
+            android:layout_width="40dp"
+            android:layout_height="40dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            tools:src="@drawable/sun_yellow_gradient"
+            app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+            android:id="@+id/weather_textview"
+            android:textColor="@android:color/white"
+            android:layout_width="wrap_content"
+            tools:text="22°C"
+            android:textSize="18sp"
+            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/weather_imageview" android:layout_marginTop="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
