--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -74,7 +74,7 @@
                     android:scaleY="0.0"
                     app:layout_constraintRight_toRightOf="parent" />
 
-        <Constraint android:id="@+id/main_weather_icon" android:layout_width="90dp" android:layout_height="90dp"
+        <Constraint android:id="@+id/main_weather_icon" android:layout_width="60dp" android:layout_height="60dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:alpha="0.0"
                     android:scaleX="0.0"
@@ -92,6 +92,7 @@
 
     <Transition
             app:constraintSetStart="@+id/start"
-            app:constraintSetEnd="@id/end">
+            app:constraintSetEnd="@id/end"
+            app:motionInterpolator="easeInOut">
     </Transition>
 </MotionScene>
