--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,6 +115,7 @@
                     android:layout_height="wrap_content"
                     android:text="Daily"
                     android:textSize="16sp"
+                    android:layout_marginBottom="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
